# wgan-jax

./: .gitignore  README.md  pyproject.toml
notebooks/: ds_wgan_procedure.ipynb  lalonde_wgan.ipynb  test_wgan_jax.ipynb
src/wgan_jax/: __init__.py
