[project]
name = "wgans-jax"
version = "0.1.0"
description = "JAX-native conditional WGAN for tabular data generation"
requires-python = ">=3.11"
dependencies = [
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "numpy",
    "pandas",
    "matplotlib",
    "tqdm>=4.67.3",
    "pyarrow>=21.0.0",
    "scikit-learn",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
